fixed 1M fix not showing for mobile view

--- a/react_webviews/src/dashboard/diy/components/style.scss
+++ b/react_webviews/src/dashboard/diy/components/style.scss
@@ -338,4 +338,11 @@
   }
 }
 
+.diy-tab-container {
+  margin: -20px;
+  .MuiTabs-flexContainer {
+    justify-content: flex-start;
+  }
+}
+
 ////// DIY SEARCH END //////
